--- a/output/bypass/hacking/css/style.css
+++ b/output/bypass/hacking/css/style.css
@@ -8,7 +8,7 @@ BUTTON.bp_button {
     color: #B49969;
     font-weight: bold;
     position: relative;
-    transition: all 0.3s ease;
+    transition: all 0.5s linear;
 }
 
 BUTTON.bp_button:focus {
@@ -93,16 +93,16 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_target_panel {
-    background: url(../img/merged/tomerge.png) no-repeat -232px -121px;
+    background: url(../img/merged/backgrounds.png) no-repeat -232px -122px;
     width: 530px;
-    height: 93px;
+    height: 92px;
     padding-top: 30px;
     padding-left: 8px;
 
 }
 
 .bp_target_panel > h2.bp_target_code {
-    background: url(../img/merged/tomerge.png) no-repeat 0 -244px;
+    background: url(../img/merged/backgrounds.png) no-repeat 0 -244px;
     height: 52px;
     width: 240px;
     text-indent: -1400px;
@@ -120,10 +120,10 @@ BUTTON.bp_button.bp_glow_on {
 
 .bp_target_panel > h2.bp_firewall_removed {
     display: none;
-    background: url(../img/merged/tomerge.png) no-repeat -357px -296px;
+    background: url(../img/merged/backgrounds.png) no-repeat -357px -296px;
     margin-left: 48px;
     margin-top: 11px;
-    height: 67px;
+    height: 58px;
     width: 426px;
     text-indent: -1400px;
 }
@@ -138,7 +138,7 @@ BUTTON.bp_button.bp_glow_on {
 
 .bp_target_panel > h2.bp_access_denied {
     display: none;
-    background: url(../img/merged/tomerge.png) no-repeat -357px -244px;
+    background: url(../img/merged/backgrounds.png) no-repeat -357px -244px;
     margin-left: 41px;
     margin-top: 11px;
     height: 52px;
@@ -180,9 +180,9 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_status_panel {
-    background: url(../img/merged/tomerge.png) no-repeat -233px 1px;
+    background: url(../img/merged/backgrounds.png) no-repeat -233px 0px;
     width: 538px;
-    height: 93px;
+    height: 92px;
     margin-left: 3px;
     padding-top: 30px;
 }
@@ -204,7 +204,7 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_status_panel > .bp_remaining_code {
-    background: url(../img/merged/tomerge.png) no-repeat -24px -183px;
+    background: url(../img/merged/backgrounds.png) no-repeat -24px -183px;
     text-indent: -1400px;
     width: 190px;
     height: 48px;
@@ -221,7 +221,7 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_status_panel > .bp_code_hack_completed {
-    background: url(../img/merged/tomerge.png) no-repeat -24px -129px;
+    background: url(../img/merged/backgrounds.png) no-repeat -24px -129px;
     text-indent: -1400px;
     margin-top: 0;
     margin-right: 86px;
@@ -250,7 +250,6 @@ BUTTON.bp_button.bp_glow_on {
     -moz-box-shadow: inset 0px 0px 8px #b36f34;
     -webkit-box-shadow: inset 0px 0px 8px #b36f34;
     box-shadow: inset 0px 0px 8px #b36f34;
-    overflow: hidden;
     margin-top: -1px;
 }
 
@@ -262,6 +261,11 @@ BUTTON.bp_button.bp_glow_on {
     background-color: green;
     border: 1px solid green;
     opacity: 0.4;
+}
+
+.bp_status_panel .bp_found_codes > DIV .img_container {
+    overflow: hidden;
+    height: 28px;
 }
 
 .bp_status_panel .bp_found_codes > DIV IMG {
@@ -369,7 +373,7 @@ BUTTON.bp_button.bp_glow_on {
     margin-left: -40px;
     margin-top: -6px;
     z-index: 5;
-    background: url(../img/merged/cursor.png) no-repeat;
+    background: url(../img/merged/backgrounds.png) no-repeat -356px -356px;
 }
 
 .bp_remaining_attempts {
@@ -391,26 +395,26 @@ BUTTON.bp_button.bp_glow_on {
 }
 
 .bp_remaining_attempts .bp_number.bp_0 {
-    background: url(../img/merged/tomerge.png) no-repeat -162px -109px;
+    background: url(../img/merged/backgrounds.png) no-repeat -162px -109px;
 }
 
 .bp_remaining_attempts .bp_number.bp_1 {
-    background: url(../img/merged/tomerge.png) no-repeat -183px -109px;
+    background: url(../img/merged/backgrounds.png) no-repeat -183px -109px;
     margin: 0 5px;
     width: 10px;
 }
 
 .bp_remaining_attempts .bp_number.bp_2 {
-    background: url(../img/merged/tomerge.png) no-repeat -194px -109px;
+    background: url(../img/merged/backgrounds.png) no-repeat -194px -109px;
 }
 
 .bp_remaining_attempts .bp_number.bp_3 {
-    background: url(../img/merged/tomerge.png) no-repeat -213px -109px;
+    background: url(../img/merged/backgrounds.png) no-repeat -213px -109px;
 }
 
 .bp_remaining_attempts .bp_msg_attempts_remaining {
     margin-left: 3px;
-    background: url(../img/merged/tomerge.png) no-repeat -11px -91px;
+    background: url(../img/merged/backgrounds.png) no-repeat -11px -91px;
     width: 220px;
     height: 18px;
 }
